Fix select checkbox prefix layout shift

--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -142,7 +142,6 @@
 }
 
 .svg-icon {
-  width: max(16px, 70%);
   height: max(16px, 70%);
   --icon-color: var(--checkbox-icon-color);
 
